--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
           proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </section>
 
+
+        <div class="wrapper clearfix">
         <h2 class="milk_text">Featured Brands</h2>
 
         <!--/////////// Featured Brands //////////-->
@@ -132,6 +134,7 @@
             <li><a href="#">Jun</a></li>
           </ul>
         </section>
+      </div>
         <!--/////////// End Archive List //////////-->
 
         <!--/////////// Deals //////////-->
